# flux

./: .dockerignore  .gitignore  .lean_bench_log.txt.swp  404.html  ABOUT.html  CI_FAILURE_ANALYSIS.md  CI_FIX_ANALYSIS.md  Cargo.toml  Dockerfile  HANDOFF.md  Handoff.md  KNOWN_ISSUES.md  KVarElimination-Implementation.md  NOTES.md  PR_DESCRIPTION_noncut.md  README.md  README_FIX.md  WICK-EVAL-NOTES.md  about.html  ayu-highlight.css  backtracetk.toml  binding_tree.dot  book.js  clippy.toml  count_true_vc.py  fix-unused-imports.patch  flux_bench.time  flux_bench_old.time  index.html  install.sh  lean_bench.time  lean_bench_log.txt  lean_bench_log2.txt  lean_bench_log3.txt  libextern_spec_struct00.fluxmeta  libextern_spec_struct00.rmeta  opencode.json  print.html  q  run.sh  (+11 more)
crates/flux-bin/: Cargo.toml  README.md  build.rs
crates/flux-bin/src/: cargo_flux_opts.rs  cargo_style.rs  lib.rs  utils.rs
flux/: Cargo.toml
flux-attrs-proc-macros/: Cargo.toml
flux-attrs-proc-macros/src/: lib.rs
flux-bin/: Cargo.toml
flux-bin/src/: utils.rs
flux-common/: Cargo.toml
flux-common/src/: bug.rs  cache.rs  config.rs  dbg.rs  index.rs  iter.rs  lib.rs  mir_storage.rs
flux-desugar/: Cargo.toml
flux-desugar/locales/: en-US.ftl
flux-desugar/src/: annot_check.rs  annot_check_hir.rs  desugar.rs  expand.rs  hir_annot_check.rs  lib.rs  rustc_middle_ty_annot_check.rs  table_resolver.rs  zip_checker.rs  zip_resolver.rs
flux-driver/: Cargo.toml
flux-driver/locales/: en-US.ftl
flux-driver/src/: callbacks.rs  collector.rs  lib.rs  mir_storage.rs
flux-fhir-analysis/: Cargo.toml
flux-fhir-analysis/locales/: en-US.ftl
flux-fhir-analysis/src/: annot_check.rs  conv.rs  lib.rs  wf.rs
flux-fhir-analysis/src/wf/: errors.rs  mod.rs  sortck.rs
flux-macros/: Cargo.toml
flux-macros/src/: lib.rs
flux-macros/src/diagnostics/: diagnostic.rs  diagnostic_builder.rs  error.rs  fluent.rs  mod.rs  subdiagnostic.rs  utils.rs
flux-metadata/: Cargo.toml
flux-metadata/locales/: en-US.ftl
flux-metadata/src/: decoder.rs  encoder.rs  lib.rs
flux-middle/: Cargo.toml
flux-middle/locales/: en-US.ftl
flux-middle/src/: cache.rs  const_eval.rs  core.rs  cstore.rs  early_ctxt.rs  expand.rs  fhir.rs  global_env.rs  intern.rs  lib.rs  pretty.rs  queries.rs
flux-middle/src/fhir/: lift.rs
flux-middle/src/rty/: conv.rs  evars.rs  expr.rs  fold.rs  mod.rs  (+5 more)
flux-refineck/: Cargo.toml
flux-refineck/locales/: en-US.ftl
flux-refineck/src/: checker.rs  constraint_gen.rs  dbg.rs  fixpoint.rs  fixpoint_encoding.rs  fold_unfold.rs  ghost_statements.rs  invariants.rs  lib.rs  param_infer.rs  place_analysis.rs  queue.rs  refine_tree.rs  sigs.rs  type_env.rs  wf.rs
flux-syntax/: Cargo.toml
flux-syntax/src/: fixpoint_eq_precedence.rs  grammar.lalrpop  lexer.rs  lib.rs  op_precedence.rs  surface.rs  surface_grammar.lalrpop
flux-typeck/: Cargo.toml
flux-typeck/src/: checker.rs  constraint_gen.rs  dbg.rs  fixpoint.rs  global_env.rs  invariants.rs  lib.rs  param_infer.rs  refine_tree.rs  sigs.rs  type_env.rs  wf.rs
flux/src/: logger.rs  main.rs
liquid-rust/: Cargo.toml  build.rs
liquid-rust-common/: Cargo.toml
liquid-rust-common/src/: config.rs  data_structures.rs  disjoint_sets.rs  errors.rs  format.rs  index.rs  ir.rs  iter.rs  lib.rs  literal.rs  macros.rs  names.rs  op.rs  ordered_hash_map.rs  ordered_map.rs  ty.rs  util.rs
liquid-rust-core/: Cargo.toml
liquid-rust-core-cli/: Cargo.toml
liquid-rust-core-cli/src/: grammar.lalrpop  main.rs
liquid-rust-core/src/: desugar.rs  diagnostics.rs  fold_unfold.rs  freshen.rs  ir.rs  lib.rs  lower.rs  names.rs  pretty.rs  program.rs  resolve.rs  subst.rs  ty.rs  wf.rs
liquid-rust-driver/: Cargo.toml  binding_tree.dot
liquid-rust-driver/src/: bbenv_builder.rs  borrowck.rs  callbacks.rs  collector.rs  lib.rs  lower.rs  lowering.rs  main.rs  mir_storage.rs  resolution.rs  resolve.rs  subst.rs  translate.rs  visitor.rs  wf.rs
liquid-rust-driver/tests/: common.rs  mod.rs  neg.rs  pos.rs
liquid-rust-fixpoint/: Cargo.toml
liquid-rust-fixpoint/src/: constant.rs  constraint.rs  emit.rs  glob_variable.rs  lib.rs  pred.rs  solver.rs  sort.rs  variable.rs
liquid-rust-lrir/: Cargo.toml
liquid-rust-lrir/src/: lib.rs
liquid-rust-middle/: Cargo.toml
liquid-rust-middle/src/: core.rs  global_env.rs  intern.rs  lib.rs  pretty.rs
liquid-rust-mir/: Cargo.toml
liquid-rust-mir/src/: bblock.rs  func.rs  lib.rs  local.rs  operand.rs  program.rs  rvalue.rs  statement.rs  terminator.rs
liquid-rust-parser/: Cargo.toml
liquid-rust-parser/src/: ast.rs  err.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.lalrpop  resolution.rs  resolve.rs  result.rs
liquid-rust-syntax/: Cargo.toml
liquid-rust-syntax/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs  resolve.rs  surface.rs  surface_grammar.lalrpop
liquid-rust-tycheck/: Cargo.toml
liquid-rust-tycheck/src/: bblock_env.rs  check.rs  env.rs  func_env.rs  glob_env.rs  glob_variable.rs  lib.rs  local_env.rs  result.rs  synth.rs  ty.rs
liquid-rust-typeck/: Cargo.toml
liquid-rust-typeck/src/: bblock_env.rs  binding_tree.rs  checker.rs  constraint.rs  constraint_builder.rs  constraint_gen.rs  dbg.rs  env.rs  fixpoint.rs  glob_env.rs  global_env.rs  inference.rs  intern.rs  lib.rs  local_env.rs  lowering.rs  param_infer.rs  pretty.rs  pure_ctxt.rs  refine_tree.rs  refineck.rs  region_inference.rs  subst.rs  subtyping.rs  synth.rs  ty.rs  tyenv.rs  type_env.rs  unification.rs  wf.rs
liquid-rust/src/: item.rs  logger.rs  main.rs
tests/: Cargo.toml  alloc.rs  ptr-overflow.rs  slice-bounds.rs
tests/neg/: assert_terminator.rs  fib_loop.rs  sur00.rs  sur01.rs  sur02.rs  test00.rs  test01.rs  test02.rs  test03.rs
tests/pass/: abs.rs  abs_mut.rs  call.rs  divide.rs  factorial.rs  identity.rs  identity_loop.rs  one.rs  successor.rs  zero_cond.rs  zero_loop.rs
tests/pos/: assert_terminator.rs  gcd.rs  heapsort.rs  kmp.rs  rvec.rs  sur00.rs  test00.rs  test01.rs  test02.rs  test03.rs
tests/src/: lib.rs
tests/tests/: compiletest.rs
tests/todo/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+210106 files in other folders)
