[workspace]
default-members = ["crates/*", "xtask"]
members = ["crates/*", "lib/*", "tests", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
flux-attrs = { path = "./crates/flux-attrs", version = "0.1.0" }
flux-bin = { path = "./crates/flux-bin", version = "0.1.0" }
flux-common = { path = "./crates/flux-common", version = "0.1.0" }
flux-config = { path = "./crates/flux-config", version = "0.1.0" }
flux-desugar = { path = "./crates/flux-desugar", version = "0.1.0" }
flux-errors = { path = "./crates/flux-errors", version = "0.1.0" }
flux-fhir-analysis = { path = "./crates/flux-fhir-analysis", version = "0.1.0" }
flux-fixpoint = { path = "./crates/flux-fixpoint", version = "0.1.0" }
flux-infer = { path = "./crates/flux-infer", version = "0.1.0" }
flux-macros = { path = "./crates/flux-macros", version = "0.1.0" }
flux-metadata = { path = "./crates/flux-metadata", version = "0.1.0" }
flux-middle = { path = "./crates/flux-middle", version = "0.1.0" }
flux-refineck = { path = "./crates/flux-refineck", version = "0.1.0" }
flux-rs = { path = "./crates/flux-rs", version = "0.1.0" }
flux-syntax = { path = "./crates/flux-syntax", version = "0.1.0" }
tests = { path = "./tests", version = "0.1.0" }

dashmap = { version = "5.5.3", features = ["raw-api"] }
home = "0.5.9"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(flux_sysroot)'] }
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
cloned-instead-of-copied = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
implicit-clone = "warn"
inefficient-to-string = "warn"
mismatching-type-param-order = "warn"
new-without-default = "allow"
semicolon-if-nothing-returned = "warn"
