[workspace]
default-members = ["crates/*", "xtask"]
members = ["crates/*", "lib/*", "tests", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
flux-arc-interner = { path = "./crates/flux-arc-interner", version = "0.1.0" }
flux-bin = { path = "./crates/flux-bin", version = "0.1.0" }
flux-common = { path = "./crates/flux-common", version = "0.1.0" }
flux-config = { path = "./crates/flux-config", version = "0.1.0" }
flux-desugar = { path = "./crates/flux-desugar", version = "0.1.0" }
flux-errors = { path = "./crates/flux-errors", version = "0.1.0" }
flux-fhir-analysis = { path = "./crates/flux-fhir-analysis", version = "0.1.0" }
flux-infer = { path = "./crates/flux-infer", version = "0.1.0" }
flux-macros = { path = "./crates/flux-macros", version = "0.1.0" }
flux-metadata = { path = "./crates/flux-metadata", version = "0.1.0" }
flux-middle = { path = "./crates/flux-middle", version = "0.1.0" }
flux-refineck = { path = "./crates/flux-refineck", version = "0.1.0" }
flux-rustc-bridge = { path = "./crates/flux-rustc-bridge", version = "0.1.0" }
flux-syntax = { path = "./crates/flux-syntax", version = "0.1.0" }
tests = { path = "./tests", version = "0.1.0" }

liquid-fixpoint = { path = "./lib/liquid-fixpoint", version = "0.1.0", features = [
    "nightly",
] }

anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.97"
bumpalo = "3.17.0"
bitflags = "2.9.4"
cargo_metadata = "0.23.0"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"], default-features = false }
dashmap = { version = "5.5.3", features = ["raw-api"] }
derive-where = "1.2.7"
ena = "0.14.3"
globset = "0.4"
hashbrown = "0.14.5"
home = "0.5.11"
itertools = "0.14.0"
pad-adapter = "0.1.1"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19.1"
toml = "0.9"
toposort-scc = "0.5.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(flux_sysroot)',
    'cfg(flux_sysroot_test)',
    'cfg(flux)',
] }
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
cloned-instead-of-copied = "warn"
disallowed-methods = "deny"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
implicit-clone = "warn"
inefficient-to-string = "warn"
mismatching-type-param-order = "warn"
new-without-default = "allow"
semicolon-if-nothing-returned = "warn"

[profile.profiling]
inherits = "release"
debug = 1
