[package]
name = "flux-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-flux"
test = false
doctest = false

[[bin]]
name = "rustc-flux"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-common = { path = "../flux-common" }
anyhow = "1.0.68"
dirs = "4.0.0"
rust-toolchain-file = "0.1.0"
