[package]
edition = "2021"
name = "flux-bin"
version = "0.1.0"

[[bin]]
doctest = false
name = "cargo-flux"
test = false

[[bin]]
doctest = false
name = "rustc-flux"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dirs = "4.0.0"
flux-config = { path = "../flux-config" }
rust-toolchain-file = "0.1.0"
