[package]
edition = "2021"
name = "flux-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.12"
flux-config = { path = "../flux-config" }
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[package.metadata.rust-analyzer]
rustc_private = true
