[package]
edition = "2021"
name = "flux-driver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-common = { path = "../flux-common" }
flux-desugar = { path = "../flux-desugar" }
flux-errors = { path = "../flux-errors" }
flux-fixpoint = { path = "../flux-fixpoint" }
flux-middle = { path = "../flux-middle" }
flux-syntax = { path = "../flux-syntax" }
flux-typeck = { path = "../flux-typeck" }
itertools = "0.10"

[package.metadata.rust-analyzer]
rustc_private = true
