[package]
edition = "2021"
name = "flux-driver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-common = { path = "../flux-common" }
flux-config = { path = "../flux-config" }
flux-desugar = { path = "../flux-desugar" }
flux-errors = { path = "../flux-errors" }
flux-fixpoint = { path = "../flux-fixpoint" }
flux-macros = { path = "../flux-macros" }
flux-metadata = { path = "../flux-metadata" }
flux-middle = { path = "../flux-middle" }
flux-refineck = { path = "../flux-refineck" }
flux-syntax = { path = "../flux-syntax" }
itertools = "0.10"
tracing = "0.1"

[package.metadata.rust-analyzer]
rustc_private = true
