[package]
edition = "2021"
name = "flux-fhir-analysis"
version = "0.1.0"

[dependencies]
ena = "0.14.2"
flux-common = { path = "../flux-common" }
flux-config = { path = "../flux-config" }
flux-errors = { path = "../flux-errors" }
flux-macros = { path = "../flux-macros" }
flux-middle = { path = "../flux-middle" }
itertools = "0.10"

[package.metadata.rust-analyzer]
rustc_private = true
