[package]
edition = "2021"
name = "flux-macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
annotate-snippets = "0.8.0"
fluent-bundle = "0.15.2"
fluent-syntax = "0.11"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
synstructure = "0.12.3"
unic-langid = { version = "0.9.0", features = ["macros"] }
