[package]
edition = "2021"
name = "flux-metadata"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-common = { path = "../flux-common" }
flux-middle = { path = "../flux-middle" }

[package.metadata.rust-analyzer]
rustc_private = true
