[package]
edition = "2021"
name = "flux-middle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.0.4", features = ["raw-api"] }
ena = "0.14.2"
flux-common = { path = "../flux-common" }
flux-config = { path = "../flux-config" }
flux-errors = { path = "../flux-errors" }
flux-fixpoint = { path = "../flux-fixpoint" }
flux-macros = { path = "../flux-macros" }
hashbrown = "0.12.3"
itertools = "0.10"
toposort-scc = "0.5.4"

[package.metadata.rust-analyzer]
rustc_private = true
