[package]
edition = "2021"
name = "flux-refineck"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
flux-common = { path = "../flux-common" }
flux-errors = { path = "../flux-errors" }
flux-fixpoint = { path = "../flux-fixpoint" }
flux-macros = { path = "../flux-macros" }
flux-middle = { path = "../flux-middle" }
itertools = "0.10"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[package.metadata.rust-analyzer]
rustc_private = true
