[package]
edition = "2021"
name = "flux-syntax"
version = "0.1.0"

[lib]
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-errors = { path = "../flux-errors" }
lalrpop-util = "0.19"

[build-dependencies]
lalrpop = "0.19"

[package.metadata.rust-analyzer]
rustc_private = true
