[package]
default-run = "flux-driver"
edition = "2021"
name = "flux"
version = "0.1.0"

[[bin]]
doctest = false
name = "flux-driver"
path = "src/main.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-common = { path = "../flux-common" }
flux-config = { path = "../flux-config" }
flux-driver = { path = "../flux-driver" }
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-timing = "0.6.0"

[dependencies.tracing]
features = ["max_level_debug", "release_max_level_info"]
version = "0.1"
