[package]
authors = ["The Liquid Rust Project Developers"]
edition = "2018"
name = "liquid-rust-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
itertools = "0.10"
lazy_static = "1.4"
rustc-workspace-hack = "1.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
