[package]
edition = "2021"
name = "liquid-rust-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
liquid-rust-common = { path = "../liquid-rust-common" }
liquid-rust-fixpoint = { path = "../liquid-rust-fixpoint" }
liquid-rust-middle = { path = "../liquid-rust-middle" }
liquid-rust-syntax = { path = "../liquid-rust-syntax" }
quickscope = "0.1"

[package.metadata.rust-analyzer]
rustc_private = true
