[package]
authors = ["The Liquid Rust Project Developers"]
edition = "2018"
name = "liquid-rust-fixpoint"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
