[package]
edition = "2021"
name = "liquid-rust-fixpoint"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4.4"
itertools = "0.10"
liquid-rust-common = { path = "../liquid-rust-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true
