[package]
authors = ["The Liquid Rust Project Developers"]
edition = "2018"
name = "liquid-rust-lrir"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid-rust-common = { path = "../liquid-rust-common" }

hashconsing = "1.3"

rustc-workspace-hack = "1.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
