[package]
name = "liquid-rust-mir"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid-rust-common = { path = "../liquid-rust-common" }
liquid-rust-ty = { path = "../liquid-rust-ty" }
