[package]
name = "liquid-rust-parser"
version = "0.1.0"
authors = ["The Liquid Rust Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
lalrpop-util = "0.19.0"
logos = "0.11.4"
