[package]
name = "liquid-rust-tycheck"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid-rust-common = { path = "../liquid-rust-common" }
liquid-rust-fixpoint = { path = "../liquid-rust-fixpoint" }
liquid-rust-mir = { path = "../liquid-rust-mir" }
