[package]
edition = "2021"
name = "liquid-rust-typeck"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid-rust-common = { path = "../liquid-rust-common" }
liquid-rust-core = { path = "../liquid-rust-core" }
liquid-rust-fixpoint = { path = "../liquid-rust-fixpoint" }

[package.metadata.rust-analyzer]
rustc_private = true
