[package]
edition = "2021"
name = "liquid-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid-rust-common = { path = "../liquid-rust-common" }
liquid-rust-driver = { path = "../liquid-rust-driver" }
tracing-subscriber = { version = "0.3", features = ["json"] }

[dependencies.tracing]
features = ["max_level_debug", "release_max_level_warn"]
version = "0.1"
