[package]
edition = "2021"
name = "xtask"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-tests.workspace = true
home.workspace = true

anyhow = "1.0.75"
opener = "0.6.1"
xflags = "0.3.1"
xshell = "0.2.5"

[lints]
workspace = true
