[package]
edition = "2021"
name = "xtask"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
tests.workspace = true
home.workspace = true

opener = "0.8.2"
xflags = "0.3.2"
xshell = "0.2.7"

[lints]
workspace = true
