[package]
name = "flux-bin"
version = "0.1.0"

edition.workspace = true

[[bin]]
doctest = false
name = "cargo-flux"
test = false

[[bin]]
doctest = false
name = "rustc-flux"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
flux-config.workspace = true
rust-toolchain-file = "0.1.0"

[lints]
workspace = true
