[package]
name = "flux-bin"
version = "0.1.0"

edition.workspace = true

[[bin]]
doctest = false
name = "cargo-flux"
test = false

[[bin]]
doctest = false
name = "rustc-flux"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"

home.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
